--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 	width: 50%;
 	min-width: 500px;
 	height: auto;
-	margin: 1000px auto;
+	margin: 10px auto;
 	opacity: 1;
 }
 
